# paramdef_codegen

./: Cargo.toml  test_param.rs
paramdex/Meta/: ActionButtonParam.xml  EquipParamGoods.xml  ItemLotParam.xml
src/: binary_utils.rs  bnd4.rs  codegen.rs  dcx.rs  game.rs  main.rs  param.rs  paramdex_reader.rs  xml_meta.rs  xml_paramdef.rs
