[package]
name = "paramdef_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", default-features = false }
regex = "1.8.4"
lazy_static = "1.4.0"
phf_codegen = "0.11.1"
serde = "1.0.164"
serde_derive = "1.0.164"
quick-xml = { version = "0.29.0", features = [ "serialize" ] }
parse_int = "0.6.0"
log = "0.4.19"
simple_logger = "4.2.0"
anyhow = "1.0.71"
aes = "0.8.3"
packed_struct = "0.10.1"
byteorder = "1.4.3"
utf16string = "0.2.0"
ctr = "0.9.2"
cbc = "0.1.2"
flate2 = "1.0.26"